--- a/meldregister.html
+++ b/meldregister.html
@@ -23,8 +23,8 @@
     <div class="table-container">
         <div class="table-options">
             <div class="search-bar"><p contenteditable="true"><img src="i/icon-search.png" /> Zoek binnen het Meldregister...</p></div>
-            <div class="table-button">&middot; &middot; &middot;</div>
-            <div class="table-button">&middot; &middot; &middot;</div>
+            <div class="table-button"><img src="i/icon-edit.png"/></div>
+            <div class="table-button"><img src="i/icon-check.png"></div>
         </div>
 
         <table class="table">
