Gradual development of mobile css viewport

--- a/melding-overview.html
+++ b/melding-overview.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/reset.css"/>
 <link rel="stylesheet" href="css/style.css"/>
 <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -11,11 +12,11 @@
 
 <div class="navbar-container">
     <nav class="navbar">
-            <ul>
-                <li><a href="index.html">SPIE SHEQ</a></li>
-                <li>Meldingenoverzicht</li>
-            </ul>
-        </nav>
+        <ul>
+            <li><a href="index.html">SPIE SHEQ</a></li>
+            <li>Meldingenoverzicht</li>
+        </ul>
+    </nav>
 </div>
 
 <div class="container">
