--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/reset.css"/>
 <link rel="stylesheet" href="css/style.css"/>
 <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -9,7 +10,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container" id="splash">
 
     <div class="left">
         <div class="inner">
