More mobile viewport css fixes

--- a/melding-overview.html
+++ b/melding-overview.html
@@ -19,6 +19,14 @@
     </nav>
 </div>
 
+<div class="navbar-container" id="mobile">
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">&#60; &nbsp; Startpagina</a></li>
+        </ul>
+    </nav>
+</div>
+
 <div class="container">
     <div class="inner repository">
         <p>Selecteer het gewenste register.</p>
