--- a/nieuwe-melding.html
+++ b/nieuwe-melding.html
@@ -12,11 +12,19 @@
 
 <div class="navbar-container">
     <nav class="navbar red">
-            <ul>
-                <li><a href="index.html">SPIE SHEQ</a></li>
-                <li>Nieuwe Melding</li>
-            </ul>
-        </nav>
+        <ul>
+            <li><a href="index.html">SPIE SHEQ</a></li>
+            <li>Nieuwe Melding</li>
+        </ul>
+    </nav>
+</div>
+
+<div class="navbar-container" id="mobile">
+    <nav class="navbar red">
+        <ul>
+            <li><a href="index.html">&#60; &nbsp; Startpagina</a></li>
+        </ul>
+    </nav>
 </div>
 
 <div class="container red">
