--- a/melding-maken.html
+++ b/melding-maken.html
@@ -12,12 +12,20 @@
 
 <div class="navbar-container">
     <nav class="navbar red">
-            <ul>
-                <li><a href="index.html">SPIE SHEQ</a></li>
-                <li><a href="nieuwe-melding.html">Nieuwe Melding</a></li>
-                <li>Melding Maken</li>
-            </ul>
-        </nav>
+        <ul>
+            <li><a href="index.html">SPIE SHEQ</a></li>
+            <li><a href="nieuwe-melding.html">Nieuwe Melding</a></li>
+            <li>Melding Maken</li>
+        </ul>
+    </nav>
+</div>
+
+<div class="navbar-container" id="mobile">
+    <nav class="navbar red">
+        <ul>
+            <li><a href="nieuwe-melding.html">&#60; &nbsp; Meldingenoverzicht</a></li>
+        </ul>
+    </nav>
 </div>
 
 <div class="container red">
