--- a/meldregister.html
+++ b/meldregister.html
@@ -12,12 +12,20 @@
 
 <div class="navbar-container">
     <nav class="navbar">
-            <ul>
-                <li><a href="index.html">SPIE SHEQ</a></li>
-                <li><a href="melding-overview.html">Meldingenoverzicht</a></li>
-                <li>Meldregister</li>
-            </ul>
-        </nav>
+        <ul>
+            <li><a href="index.html">SPIE SHEQ</a></li>
+            <li><a href="melding-overview.html">Meldingenoverzicht</a></li>
+            <li>Meldregister</li>
+        </ul>
+    </nav>
+</div>
+
+<div class="navbar-container" id="mobile">
+    <nav class="navbar">
+        <ul>
+            <li><a href="melding-overview.html">&#60; &nbsp; Meldingenoverzicht</a></li>
+        </ul>
+    </nav>
 </div>
 
 <div class="container">
