--- a/nieuwe-melding.html
+++ b/nieuwe-melding.html
@@ -6,6 +6,10 @@
 <link rel="stylesheet" href="css/style.css"/>
 <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 
+<link rel="icon" type="image/png" sizes="192x192"  href="i/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="i/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="i/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="i/favicon-16x16.png">
 
 </head>
 <body>
